--- a/main.ipynb
+++ b/main.ipynb
@@ -671,6 +671,153 @@
    "source": [
     "modelo_5.save('modelo_apos_aumento.h5')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10ac99cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_shape=(256, 256, 3)\n",
+    "\n",
+    "modelo_base = tf.keras.applications.InceptionV3(\n",
+    "    input_shape=input_shape,\n",
+    "    include_top=False,\n",
+    "    weights='imagenet'\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ae364b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "modelo_base.trainable = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b382dd60",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "modelo_base.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8893393",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rescale = tf.keras.layers.Rescaling((1./255))\n",
+    "treino = treino.map(lambda x, y: (rescale(x), y))\n",
+    "validacao = validacao.map(lambda x, y: (rescale(x), y))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "35891a96",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ultima_camada = modelo_base.get_layer('mixed7')\n",
+    "print('tamanho da última camada: ', ultima_camada.output_shape)\n",
+    "ultima_saida = ultima_camada.output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5bab11f8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = tf.keras.layers.Flatten()(ultima_saida)\n",
+    "\n",
+    "x = tf.keras.layers.Dense(1024, activation='relu')(x)\n",
+    "\n",
+    "x = tf.keras.layers.Dropout(0.2)(x)\n",
+    "\n",
+    "x = tf.keras.layers.Dense(4, activation=tf.nn.softmax)(x)\n",
+    "\n",
+    "modelo = tf.keras. Model(inputs=modelo_base.input,outputs=x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "21f42414",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "modelo.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e8b26c91",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "modelo.compile(\n",
+    "    optimizer = tf.keras.optimizers.Adam(),\n",
+    "    loss = 'sparse_categorical_crossentropy',\n",
+    "    metrics=['accuracy']\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d002043c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "epocas = 20\n",
+    "\n",
+    "history = modelo.fit(\n",
+    "    treino,\n",
+    "    validation_data=validacao,\n",
+    "    epochs=epocas,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3eb4c1bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "modelo.save('modelo_final_transferencia_de_aprendizado.h5', include_optimizer=False)\n",
+    "modelo.save_weights('pesos.h5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d74fd7dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "converter = tf.lite.TFLiteConverter.from_keras_model(modelo)\n",
+    "\n",
+    "converter.optimizations = [tf.lite.Optimize.DEFAULT]\n",
+    "converter.target_spec.supported_types = [tf.float16]\n",
+    "\n",
+    "modelo_tflite_quantizado = converter.convert()\n",
+    "\n",
+    "with open('modelo_quantizado16bits.tflite', 'wb') as f:\n",
+    "    f.write(modelo_tflite_quantizado)"
+   ]
   }
  ],
  "metadata": {
